@@ -5,6 +5,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Tom Collins
 	- Add missing link libs (m, nsl, socket) on Solaris installs.
+	- Fix vsetuserquota() to write properly formatted quota to 
+	  maildirsize file.
 
 5.4.2 - released 22-Feb-04
 
